--- a/index.html
+++ b/index.html
@@ -1,10 +1,156 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+    <header class="header">
+        <nav class="header__menu">
+            <ul class="header__links-list">
+                <li class="header__links-list-item header__links-list-item--no-bullit"><a href="#">главная</a></li>
+                <li class="header__links-list-item"><a href="#">посмотреть лоты</a></li>
+                <li class="header__links-list-item"><a href="#">об аукционе</a></li>
+            </ul>
+        </nav>
+        <a class="header__logo">
+            <img src="./images/logo-black.svg" alt="логотип">
+        </a>
+        <address class="header__address">
+            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <br>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <br>
+            наб. Принсенграхт 263 - <br> 265, Амстердам
+        </address>
+    </header>
+    <main class="main">
+        <section class="cover">
+            <div class="cover__title">
+                <span class="cover__title-text cover__title-left-text-aligned">ОНО</span>
+                <span class="cover__title-text cover__title-center-text-aligned">ТЕБЕ</span>
+                <span class="cover__title-text cover__title-right-text-aligned">НАДО</span>
+            </div>
+            <div class="cover__description">
+                <p class="cover__description-text">Аукцион вещей, вкоторые никто не верил</p>
+                <button class="cover__description-bet-button">Сделать ставку</button>
+            </div>
+        </section>
+        <section class="lots">
+            <h2 class="title-text lots__title">лоты</h1>
+                <ul class="lots__cards">
+                    <li class="lots__cards-item-bg-1 lots__card-item">
+                        <a href="#">
+                            <article class="lots__card_text-content">
+                                <h3 class="title-text lots__card_text-content-title">Фильм режиссёра, который бросил
+                                    киношколу</h3>
+                                <p class="common-text lots__card_text-content-text">Не просто бросил, а ушёл с первой
+                                    лекции. Какой была бы ваша ставка, если бы вы не знали,
+                                    что режиссёр — Пол Томас Андерсон?</p>
+                            </article>
+                        </a>
+                    </li>
+                    <li class="lots__cards-item-bg-2 lots__card-item ">
+                        <a href="#">
+                            <article class="lots__card_text-content">
+                                <h3 class="title-text lots__card_text-content-title">Книга, где описан один скучный день
+                                    из жизни рекламного агента</h3>
+                                <p class="common-text lots__card_text-content-text">Объёмом почти в тысячу страниц.
+                                    Иногда без знаков препинания и с переходами на
+                                    древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории
+                                    литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
+                                    Гомера.
+                                    Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                            </article>
+                        </a>
+                    </li>
+                    <li class="lots__cards-item-bg-3 lots__card-item ">
+                        <a href="#">
+                            <article class="lots__card_text-content">
+                                <h3 class="title-text lots__card_text-content-title">Картина, которую повторит даже
+                                    5-летний сын маминой подруги</h3>
+                                <p class="common-text lots__card_text-content-text">Ну действительно, там линия, тут
+                                    кружочек, а здесь и вовсе что-то похожее на
+                                    инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
+                                    поставили,
+                                    если
+                                    бы не знали, что это — одна из революционных работ Кандинского?</p>
+                            </article>
+                        </a>
+                    </li>
+                </ul>
+                <p class="common-text lots__view-more-link"><a href="#">посмотреть больше</a></p>
+        </section>
+        <section class="about">
+            <div class="about__background">
+                <img class="about__logo" src="./images/logo-white.svg" alt="лого">
+            </div>
+            <div class="about__content">
+                <h3 class="about__content-title">Об аукционе</h3>
+                <article class="about__content-text">
+                    <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты
+                        вообще не
+                        должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
+                        картина, которую
+                        может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+                    </p>
+                    <br>
+                    <span>
+                        Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
+                        растерзанные
+                        критиками.
+                        Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                        на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
+                        современную
+                        культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты
+                        стали
+                        культовыми.
+                        </p>
+                </article>
+
+            </div>
+        </section>
+    </main>
+    <footter class="footer">
+        <address class="footer__address">
+            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <br>
+            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+            <br>
+            наб. Принсенграхт 263- 265,<br>Амстердам
+        </address>
+        <nav>
+            <ul class="without-bullets footer__links-list">
+                <li class="footer__links-list-item"><a href="#">главная</a></li>
+                <li class="footer__links-list-item"><a href="#">посмотреть лоты</a></li>
+                <li class="footer__links-list-item"><a href="#">об аукционе</a></li>
+            </ul>
+        </nav>
+        <ul class="footer__social_list">
+            <li class="footer__social_list_item_icon">
+                <a href="#">
+                    <img src="./images/yt.svg" alt="youtube">
+                </a>
+            </li>
+            <li class="footer__social_list_item_icon">
+                <a href="#">
+                    <img src="./images/vk.svg" alt="vk">
+                </a>
+            </li>
+            <li class="footer__social_list_item_icon">
+                <a href="#">
+                    <img src="./images/pinterest.svg" alt="pinterest">
+                </a>
+            </li>
+        </ul>
+    </footter>
+</body>
+
 </html>
