--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="./images/logo-black.svg" alt="логотип">
         </a>
         <address class="header__address">
-            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
             <br>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             <br>
@@ -44,7 +44,7 @@
             </div>
         </section>
         <section class="lots">
-            <h2 class="title-text lots__title">лоты</h1>
+            <h2 class="title-text lots__title">лоты</h2>
                 <ul class="lots__cards">
                     <li class="lots__cards-item-bg-1 lots__card-item">
                         <a href="#">
@@ -102,7 +102,7 @@
                         может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
                     </p>
                     <br>
-                    <span>
+                    <p>
                         Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах
                         растерзанные
                         критиками.
@@ -112,13 +112,12 @@
                         культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты
                         стали
                         культовыми.
-                        </p>
+                    </p>
                 </article>
-
             </div>
         </section>
     </main>
-    <footter class="footer">
+    <footer class="footer">
         <address class="footer__address">
             <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
             <br>
@@ -150,7 +149,7 @@
                 </a>
             </li>
         </ul>
-    </footter>
+    </footer>
 </body>
 
 </html>
