--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </main>
     <footer class="footer">
         <address class="footer__address">
-            <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+            <a href="tel:+99995555555">+9 999 555 5555</a>
             <br>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
             <br>
