fix - замечания от ревьювера, хорошо что я их нашел T_T  (norefs)

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="header__logo">
             <img src="./images/logo-black.svg" alt="логотип">
         </a>
-        <address class="header__address">
+        <address class="address header__address">
             <a href="tel:+99995555555">+9 999 555 5555</a>
             <br>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -32,61 +32,61 @@
         </address>
     </header>
     <main class="main">
-        <section class="cover">
-            <div class="cover__title">
+        <section class="cover overlay-commons">
+            <h1 class="cover__title">
                 <span class="cover__title-text cover__title-left-text-aligned">ОНО</span>
                 <span class="cover__title-text cover__title-center-text-aligned">ТЕБЕ</span>
                 <span class="cover__title-text cover__title-right-text-aligned">НАДО</span>
-            </div>
+            </h1>
             <div class="cover__description">
                 <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-                <button class="cover__description-bet-button">Сделать ставку</button>
+                <button class="cover__description-bet-button" type="button">Сделать ставку</button>
             </div>
         </section>
         <section class="lots">
             <h2 class="title-text lots__title">лоты</h2>
-                <ul class="lots__cards">
-                    <li class="lots__cards-item-bg-1 lots__card-item">
-                        <a href="#">
-                            <article class="lots__card_text-content">
-                                <h3 class="title-text lots__card_text-content-title">Фильм режиссёра, который бросил
-                                    киношколу</h3>
-                                <p class="common-text lots__card_text-content-text">Не просто бросил, а ушёл с первой
-                                    лекции. Какой была бы ваша ставка, если бы вы не знали,
-                                    что режиссёр — Пол Томас Андерсон?</p>
-                            </article>
-                        </a>
-                    </li>
-                    <li class="lots__cards-item-bg-2 lots__card-item ">
-                        <a href="#">
-                            <article class="lots__card_text-content">
-                                <h3 class="title-text lots__card_text-content-title">Книга, где описан один скучный день
-                                    из жизни рекламного агента</h3>
-                                <p class="common-text lots__card_text-content-text">Объёмом почти в тысячу страниц.
-                                    Иногда без знаков препинания и с переходами на
-                                    древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории
-                                    литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
-                                    Гомера.
-                                    Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
-                            </article>
-                        </a>
-                    </li>
-                    <li class="lots__cards-item-bg-3 lots__card-item ">
-                        <a href="#">
-                            <article class="lots__card_text-content">
-                                <h3 class="title-text lots__card_text-content-title">Картина, которую повторит даже
-                                    5-летний сын маминой подруги</h3>
-                                <p class="common-text lots__card_text-content-text">Ну действительно, там линия, тут
-                                    кружочек, а здесь и вовсе что-то похожее на
-                                    инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
-                                    поставили,
-                                    если
-                                    бы не знали, что это — одна из революционных работ Кандинского?</p>
-                            </article>
-                        </a>
-                    </li>
-                </ul>
-                <p class="common-text lots__view-more-link"><a href="#">посмотреть больше</a></p>
+            <ul class="lots__cards">
+                <li class="lots__cards-item-bg-fancy-book overlay-commons lots__card-item">
+                    <a href="#">
+                        <article class="lots__card_text-content">
+                            <h3 class="title-text lots__card_text-content-title">Фильм режиссёра, который бросил
+                                киношколу</h3>
+                            <p class="common-text lots__card_text-content-text">Не просто бросил, а ушёл с первой
+                                лекции. Какой была бы ваша ставка, если бы вы не знали,
+                                что режиссёр — Пол Томас Андерсон?</p>
+                        </article>
+                    </a>
+                </li>
+                <li class="lots__cards-item-bg-borinng-book overlay-commons lots__card-item ">
+                    <a href="#">
+                        <article class="lots__card_text-content">
+                            <h3 class="title-text lots__card_text-content-title">Книга, где описан один скучный день
+                                из жизни рекламного агента</h3>
+                            <p class="common-text lots__card_text-content-text">Объёмом почти в тысячу страниц.
+                                Иногда без знаков препинания и с переходами на
+                                древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории
+                                литературы, начиная с античных времён. И это всё накладывается на эпическую поэму
+                                Гомера.
+                                Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                        </article>
+                    </a>
+                </li>
+                <li class="lots__cards-item-bg-silly-book overlay-commons lots__card-item ">
+                    <a href="#">
+                        <article class="lots__card_text-content">
+                            <h3 class="title-text lots__card_text-content-title">Картина, которую повторит даже
+                                5-летний сын маминой подруги</h3>
+                            <p class="common-text lots__card_text-content-text">Ну действительно, там линия, тут
+                                кружочек, а здесь и вовсе что-то похожее на
+                                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое
+                                поставили,
+                                если
+                                бы не знали, что это — одна из революционных работ Кандинского?</p>
+                        </article>
+                    </a>
+                </li>
+            </ul>
+            <a class="common-text lots__view-more-link" href="#">посмотреть больше</a>
         </section>
         <section class="about">
             <div class="about__background">
@@ -94,7 +94,7 @@
             </div>
             <div class="about__content">
                 <h3 class="about__content-title">Об аукционе</h3>
-                <article class="about__content-text">
+                <div class="about__content-text">
                     <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты
                         вообще не
                         должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -112,12 +112,12 @@
                         стали
                         культовыми.
                     </p>
-                </article>
+                </div>
             </div>
         </section>
     </main>
     <footer class="footer">
-        <address class="footer__address">
+        <address class="address footer__address">
             <a href="tel:+99995555555">+9 999 555 5555</a>
             <br>
             <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -126,7 +126,7 @@
         </address>
         <nav>
             <ul class="without-bullets footer__links-list">
-                <li class="footer__links-list-item"><a href="#">главная</a></li>
+                <li class="footer__links-list-item"><a class="active-link" href="#">главная</a></li>
                 <li class="footer__links-list-item"><a href="#">посмотреть лоты</a></li>
                 <li class="footer__links-list-item"><a href="#">об аукционе</a></li>
             </ul>
